# analogatique

./: CHANGELOG.md  Cargo.toml  README.md
.github/: pull_request_template.md
.github/workflows/: release.yml
src/: config.rs  generator.rs  images.rs  main.rs  metadata.rs
src/cli/: commands.rs  mod.rs
src/metadata/: exif.rs  merger.rs  mod.rs  parser.rs
src/processing/: dither.rs  formats.rs  mod.rs  resize.rs
src/utils/: fs.rs
templates/: index.html  styles.css
